2002-07-04  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Statusbar => Label to allow setting a fixed
	  width font and thus avoid getting the coordinates to move
	  as the number of digits change. Moved font names to header
	  file. We should consider using a rc-file for font names and
	  colours and stuff.
	  Made status bar not expandable.

2002-07-02  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Macrofied coordinate unit
	  conversions to have the constants in one place. Converted
	  sprintf()s to safer snprintf()s.

2002-07-01  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h: Bounding box needs to be doubles, not
	  ints.
	* src/gerbv.c (motion_notify_event): Finally it seems I got 
	  the absolute coordinates right. Partly closes feature
	  request 567965 (still need to add error messages and fix
	  the layout).
	  * Fixed some of the layout issues. Now uses only one statusbar
	  widget instead of three. The message is composed from three
	  strings. Still no error messages.

2002-06-20  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Mils are 0.001 inch and not 0.01, thanks Dan!
	  This closes bug #571097.

2002-06-19  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (motion_notify_event): py, not px!
	* src/gerbv.c, src/gerbv_screen.h, src/draw.c: Added bounding
	  box translations to get correct gerber coordinates (second
	  try, did I make it?).

2002-06-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added background color selection. Closes feature
	  request 557365.
	
2002-06-17  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h: added msgid for stausbar.
	* src/gerbv.c: Changed coordinate output both in statusbar and
	  in measure mode. Now using mils and mms as units. Coordinates
	  are now correct in respect to the gerber coordinate system
	  (at least that's what I think). Too much information is shown
	  in the statusbar, we will have to add unit selection (either